[package]
name = "merthc"
version = "0.1.0"
authors = ["Peter Marheine <peter@taricorp.net>"]
build = "build.rs"

[dependencies]
docopt = "0.6"
env_logger = "0.3"
llvm-sys = "0.2"
libc = "0.2"
log = "0.3"
phf = "0.7"
rustc-serialize = "0.3"
tempfile = "2"

[build-dependencies]
phf_codegen = "0.7"
gcc = "0.3"
